Update Post “2021-01-17-new-post”

--- a/content/posts/2021-01-17-new-post.md
+++ b/content/posts/2021-01-17-new-post.md
@@ -7,8 +7,20 @@ excerpt: This is a new draft post
 ---
 This is just a **demo** post. **I have made these changes from the Netlify CMS.**
 
+
+
+### **Google Data Studio Example**
+
 <iframe allowfullscreen="" frameborder="0" height="400px" marginheight="0px" marginwidth="0px" name="myiFrame" scrolling="yes" src="https://datastudio.google.com/embed/reporting/1httI14Yytc3Eq2aEdgkTvb0gVyqFlfYs/page/4IMq" style="border: 0px #ffffff none;" width="100%"></iframe>
-<br>
+
+
+
+### YouTube Example
+
 <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/FAx-DBUHOXE" width="560"></iframe>
-<br>
+
+
+
+### Google Apps Script Example
+
 <iframe src="https://script.google.com/macros/s/AKfycbxrTUsBHBh4aYyy9jzKQHL9Ke1HDTV1jn1qceo9_FB3yxlFZzjfysWA/exec" style="border: 0px #ffffff none;" width="100%"></iframe>
